tests/ui/derive_specifier/duplicate_derive_2.stderr
error: encountered duplicate `#[derive(BitfieldSpecifier)]` parameter
 --> tests/ui/derive_specifier/duplicate_derive_2.rs:4:39
  |
4 | #[derive(BitfieldSpecifier)] #[derive(BitfieldSpecifier)]
  |                                       ^^^^^^^^^^^^^^^^^

error: previous `#[derive(BitfieldSpecifier)]` parameter here
 --> tests/ui/derive_specifier/duplicate_derive_2.rs:4:10
  |
4 | #[derive(BitfieldSpecifier)] #[derive(BitfieldSpecifier)]
  |          ^^^^^^^^^^^^^^^^^
